--- a/group_style.css
+++ b/group_style.css
@@ -1,20 +1,30 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
+    background-image: linear-gradient(to right, yellow , red);
 }
 
 .container {
-    border: 1px solid black;
     width: 800px;
 }
 
+.top_bar{
+    padding: 10px 10px;
+    display: flex;
+    gap: 10px;
+    border: 1px solid black;
+    border-bottom: none;
+}
+
 .header {
-    border-bottom: 1px solid black;
+    border: 1px solid black;
+    border-bottom: none;
     padding: 10px 10px;
 }
 
 .content {
     display: flex;
+    border: 1px solid black;
 }
 
 .Adds {
