--- a/hobby_style.css
+++ b/hobby_style.css
@@ -1,12 +1,21 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
+    background-image: linear-gradient(to right, yellow , red);
 }
 
 .main-container {
     width: 1000px;
     border: 1px solid black;
     box-sizing: border-box;
+}
+
+.top_bar{
+    padding: 10px 10px;
+    display: flex;
+    gap: 10px;
+    border: 1px solid black;
+    border-bottom: none;
 }
 
 .container {
