--- a/interesting_style.css
+++ b/interesting_style.css
@@ -1,12 +1,20 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
+    background-image: linear-gradient(to right, yellow , red);
 }
 
 .main-container {
     width: 1000px;
     border: 1px solid black;
     box-sizing: border-box;
+}
+
+.top_bar{
+    padding: 10px 10px;
+    display: flex;
+    gap: 10px;
+    border-bottom: 1px solid black;
 }
 
 .header-title {
@@ -22,6 +30,10 @@ body {
 .section {
     display: flex;
     flex-direction:row;
+}
+
+.section img{
+    padding: 10px;
 }
 
 .text-block{
