--- a/hobby_style.css
+++ b/hobby_style.css
@@ -1,71 +1,66 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
-    background-image: linear-gradient(to right, yellow , red);
+    background-image: linear-gradient(to right, yellow, red);
 }
 
 .main-container {
-    width: 1000px;
+    max-width: 1000px;
+    margin: auto;
     border: 1px solid black;
-    box-sizing: border-box;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    gap: 10px;
 }
 
-.top_bar{
-    padding: 10px 10px;
+.top_bar {
     display: flex;
     gap: 10px;
-    border: 1px solid black;
-    border-bottom: none;
-}
-
-.container {
-    border: 1px solid black;
-    width: 800px;
-}
-
-.header {
+    padding: 10px;
     border-bottom: 1px solid black;
-    padding: 10px 10px;
 }
 
 .content-area {
-    display: flex;
-}
-
-.left-content {
-    flex: 1;
-}
-
-.right-ad-block {
-    flex: 2;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 10px;
     padding: 10px;
-    text-align: center;
-    border-right: 1px solid black;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    background-color: #f4f4f4;
+}
+
+.left-content .container {
+    border: 1px solid black;
+    display: grid;
+    grid-template-rows: auto 1fr;
+}
+
+.header {
+    padding: 10px;
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .content {
-    display: flex;
+    border-top: 1px solid black;
 }
 
-.left {
+.left, .middle, .right {
     padding: 10px;
-    width: 33%;
-    display: block;
-    margin: auto;
-    border-right: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 .right {
-    padding: 10px;
-    width: 33%;
-    border-right: none;
+    border-bottom: none;
 }
 
-.midle {
+.right-ad-block {
     padding: 10px;
-    width: 33%;
-    border-right: 1px solid black;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right-ad-block img {
+    max-width: 100%;
+    height: auto;
 }
