--- a/index_style.css
+++ b/index_style.css
@@ -5,10 +5,9 @@ body {
 }
 
 .main-container {
+    margin: auto;
     display: flex;
     flex-direction: column;
-    padding-left: 10%;
-    padding-right: 10%;
     box-sizing: border-box;
     align-items: center;
     justify-content: center;
